vercel configuration change

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
     "version": 2,
     "builds":[ {
-        "src": "api/index.js",
+        "src": "api/handler.js",
         "use": "@now/node"
     }],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/index.js"
+            "dest": "api/handler.js"
         }
     ]
 }
