--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hawkeye359",
   "version": "1.0.0",
-  "type": "module",
   "description": "<img src=\"https://github.com/hawkeye359/hawkeye359/blob/c4871ba4cb91e03510c852bdf9db38c4103daff2/assets/banner.png\"><br/> <div align=\"center\">     <img src=\"https://custom-icon-badges.demolab.com/badge/views-215-red?style=for-the-badge&logo=eye\"> &nbsp;     <a href=\"https://twitter.com/hawkeye359\">         <img src=\"https://custom-icon-badges.demolab.com/badge/@hawkeye359-blue?style=for-the-badge&logo=twitter\">     </a> </div><br/> <h1 style=\"border-bottom: 0px;\" ><div style=\"none\" align=\"center\"> Hey! <img src=\"assets/waving_hand.gif\" style=\"height:40px; position: relative; top: 7px\"> nice to meet you <img src=\"assets/smiling_face.gif\" style=\"height:40px; position: relative; top: 10px\"></div></h1><br/> <img style=\"height: 380px; padding: 10px;\" align=\"right\" src=\"https://github.com/hawkeye359/hawkeye359/blob/91e1d409b10ca7b03a2eb976513813c1548f0758/assets/side.jpeg\">",
   "main": "index.js",
   "scripts": {
@@ -21,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "node-fetch": "^2.6.7"
   }
 }
